# AutoSudoku

./: CMakeLists.txt  LICENSE
src/: board.cpp  board.h  main.cpp  solver.cpp  solver.h  structs.h
